--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -1,7 +1,7 @@
 <div class="rtl">
     <div layout-margin layout="column">
 
-        <h1>{{property.url | extractLastUrlItem}}</h1>
+        <h1>{{property.name}}</h1>
 
         <md-input-container>
             <label>آدرس :‌ </label>
