--- a/styles/main.css
+++ b/styles/main.css
@@ -463,6 +463,47 @@ ul.small {
   margin-left: 10px;
   color: #555;
 }
+.demo-md-panel {
+  min-height: 500px;
+}
+.dialog-panel,
+.dialog-panel-big,
+.dialog-panel-small,
+.dialog-panel-thin {
+  background: white;
+  border-radius: 4px;
+  box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.2), 0 13px 19px 2px rgba(0, 0, 0, 0.14), 0 5px 24px 4px rgba(0, 0, 0, 0.12);
+}
+.dialog-panel-big {
+  width: 760px;
+}
+.dialog-panel-big .dialog-panel-content {
+  max-height: 580px;
+}
+.dialog-panel-small {
+  width: 640px;
+}
+.dialog-panel-small .dialog-panel-content {
+  max-height: 480px;
+}
+.dialog-panel-thin {
+  width: 480px;
+}
+.dialog-panel-thin .dialog-panel-content {
+  max-height: none;
+}
+.dialog-panel-content {
+  padding: 0 15px;
+  overflow-y: scroll;
+  width: 100%;
+}
+.dialog-panel-content img {
+  height: 300px;
+  margin: auto;
+}
+.demo-dialog-button {
+  width: 100%;
+}
 /**/
 .loading {
   direction: rtl;
@@ -535,6 +576,14 @@ md-sidenav.md-closed.md-locked-open-add-active {
 }
 md-dialog {
   direction: rtl;
+}
+.md-panel-outer-wrapper {
+  height: 100%;
+  left: 0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
 }
 input.md-input,
 textarea.md-input {
