fix some issues

--- a/templates/mappings/template-item-rule.html
+++ b/templates/mappings/template-item-rule.html
@@ -1,6 +1,6 @@
 <td ng-if="!r.editing">{{$index+1}}</td>
 <td ng-if="!r.editing">
-    <span class="fa fa-lg fa-file-powerpoint-o filter-property button"
+    <span class="fa fa-lg fa-info-circle filter-property button"
           ng-click="filterProperty(r, $event)"></span>
     <span>{{r.property}}</span>
 </td>
