fix domain url open predicate in new tab

--- a/templates/mappings/property.html
+++ b/templates/mappings/property.html
@@ -118,7 +118,7 @@
             <td>
                 <div ng-repeat="p in item.predicates track by $index">
                     <span ng-if="!p.startsWith('fkgo:')">{{p}}</span>
-                    <a ng-if="p.startsWith('fkgo:')" href="http://dmls.iust.ac.ir/pkg/#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{p.replace('fkgo:', '')}}">{{p}}</a>
+                    <a ng-if="p.startsWith('fkgo:')" target="_blank" href="http://dmls.iust.ac.ir/pkg/#!/ontology/property/http:~2F~2Ffkg.iust.ac.ir~2Fontology~2F{{p.replace('fkgo:', '')}}">{{p}}</a>
                 </div>
             </td>
             <td>
