edit property.name edit class.name

--- a/templates/ontology/class-edit.html
+++ b/templates/ontology/class-edit.html
@@ -4,6 +4,11 @@
         <h1>{{clazz.name}}</h1>
 
         <md-input-container>
+            <label>نام کلاس :‌ </label>
+            <input type="text" ng-model="clazz.name"/>
+        </md-input-container>
+
+        <md-input-container>
             <label>آدرس :‌ </label>
             <input type="text" ng-model="clazz.url" class="ltr left"/>
         </md-input-container>
