--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -4,6 +4,11 @@
         <h1>{{property.name}}</h1>
 
         <md-input-container>
+            <label>نام خصیصه :‌ </label>
+            <input type="text" ng-model="property.name"/>
+        </md-input-container>
+
+        <md-input-container>
             <label>آدرس :‌ </label>
             <input type="text" ng-model="property.url"/>
         </md-input-container>
