change domains, ranges, types to : دامنه، محدوده، نوع

--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -39,17 +39,17 @@
         </md-input-container>
 
         <md-input-container>
-            <label>domains (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
+            <label>دامنه (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
             <textarea type="text" ng-model="property.domains" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
-            <label>ranges (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
+            <label>محدوده (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
             <textarea type="text" ng-model="property.ranges" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
-            <label>types (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
+            <label>نوع (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
             <textarea type="text" ng-model="property.types" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
