--- a/templates/ontology/property.html
+++ b/templates/ontology/property.html
@@ -51,7 +51,7 @@
                 </tr>
                 <tr>
                     <td class="left">
-                        <h3>domains : </h3>
+                        <h3>دامنه : </h3>
                     </td>
                     <td>
                         <!--<div ng-repeat="d in property.domains track by $index">{{d}}</div>-->
@@ -62,7 +62,7 @@
                 </tr>
                 <tr>
                     <td class="left">
-                        <h3>ranges : </h3>
+                        <h3>محدوده : </h3>
                     </td>
                     <td>
                         <div ng-repeat="r in property.ranges track by $index">{{r}}</div>
@@ -70,7 +70,7 @@
                 </tr>
                 <tr>
                     <td class="left">
-                        <h3>types : </h3>
+                        <h3>نوع : </h3>
                     </td>
                     <td>
                         <div ng-repeat="pt in property.types track by $index">
