--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -1,7 +1,11 @@
 <div ng-cloak>
     <div layout-margin>
+        <div layout="row" layout-align="center center">
+            <md-button ng-disabled="!clazz.previous" ng-click="prevClass($event)" class="md-primary">کلاس قبل</md-button>
+            <md-button ng-disabled="!clazz.next" ng-click="nextClass($event)" class="md-primary">کلاس بعد</md-button>
+        </div>
 
-        <div>
+        <div layout="row">
             <h1>{{clazz.faLabel}}<a class="small-text" ui-sref="ontology.class-edit({classUrl:clazz.url})">(ویرایش)</a></h1>
         </div>
 
