ontology-tree graphical view

--- a/styles/svg.less
+++ b/styles/svg.less
@@ -8,7 +8,7 @@ div#tree-graphical-container {
   bottom: 0;
   background-color: white;
   z-index: 1001;
-  overflow: scroll;
+  overflow: hidden;
   direction: ltr;
   text-align: left;
 
