--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -1,4 +1,4 @@
-<div ng-cloak>
+<div>
     <div layout-margin>
         <div layout="row" layout-align="center center">
             <md-button ng-disabled="!clazz.previous" ng-click="prevClass($event)" class="md-primary">کلاس قبل</md-button>
