--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -1,67 +1,88 @@
-<h1>
-    سامانه مدیریت هستان‌شناسی
-</h1>
-<div layout="row">
-    <md-radio-group ng-model="lang" layout="row">
-        <md-radio-button value="FA" class="md-primary">فارسی</md-radio-button>
-        <md-radio-button value="EN">English</md-radio-button>
-    </md-radio-group>
-    <div style="width: 100px"></div>
-    <!--<md-radio-group ng-model="type" layout="row">-->
-    <!--<md-radio-button value="SIMPLE" class="md-primary">ساده</md-radio-button>-->
-    <!--<md-radio-button value="GRAPHICAL">گرافیکی</md-radio-button>-->
-    <!--</md-radio-group>-->
-</div>
+<div>
+    <h1>سامانه مدیریت هستان‌شناسی</h1>
 
-<md-divider></md-divider>
+    <md-divider></md-divider>
 
-<div ng-show="type=='SIMPLE'" ng-class="{'ltr' : lang=='EN'}">
-    <div layout-margin ng-if="items">
-        <md-button class="md-raised md-primary" ng-click="expandAll()">نمایش همه</md-button>
-        <md-button class="md-raised md-primary" ng-click="collapseAll()"
-                   ng-style="{'background-color': 'green'}">بستن همه
-        </md-button>
+    <!--simple view-->
+    <div ng-show="view=='SIMPLE'">
+        <!--toolbar-->
+        <div>
+            <div layout-margin layout="row">
+                <md-button ng-disabled="!items" class="md-raised md-primary" ng-click="expandAll()">نمایش همه
+                </md-button>
+                <md-button ng-disabled="!items" class="md-raised md-primary" ng-click="collapseAll()"
+                           ng-style="{'background-color': 'green'}">بستن همه
+                </md-button>
 
-        <md-button class="md-raised md-primary" ng-click="switchView()"
-                   ng-style="{'background-color': 'cadetblue'}">نمایش گرافیکی
-        </md-button>
+                <md-button ng-disabled="!items" class="md-raised md-primary" ng-click="switchView('GRAPHICAL')"
+                           ng-style="{'background-color': 'cadetblue'}">نمایش گرافیکی
+                </md-button>
+                <span flex></span>
 
-        <!--
-                <md-input-container>
-                    <label>باز کردن در سطح</label>
-                    <md-select ng-model="level" ng-change="expandTo(level)">
-                        <md-option ng-repeat="i in [1,2,3,4,5,6,7,8,9]"><em>{{i}}</em></md-option>
-                    </md-select>
-                </md-input-container>
-        -->
+                <div layout="row" layout-align="end center">
+                    <md-radio-group ng-disabled="!items" ng-model="lang" ng-change="switchLanguage(lang)" layout="row">
+                        <md-radio-button value="fa" class="md-primary">فارسی</md-radio-button>
+                        <md-radio-button value="en">English</md-radio-button>
+                    </md-radio-group>
+                </div>
+            </div>
+        </div>
+
+        <!--TreeView-->
+        <div>
+            <!--right to left TreeView-->
+            <div ng-if="lang=='fa'" ng-class="{'ltr' : lang=='en'}">
+                <div ivh-treeview="items"
+                     ivh-treeview-twistie-expanded-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_expand_more_black_24px.svg\'></md-icon>'"
+                     ivh-treeview-twistie-collapsed-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_chevron_left_black_24px.svg\'></md-icon>'"
+                     ivh-treeview-use-checkboxes="false"
+                     ivh-treeview-expand-to-depth="1">
+                    <script type="text/ng-template">
+                        <span ivh-treeview-toggle>
+                    <span ivh-treeview-twistie></span>
+                </span>
+                        <span class="ivh-treeview-node-label">
+                    <a class="ivh-treeview-node-link"
+                       ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}}</a>
+                </span>
+                        <div ivh-treeview-children></div>
+                    </script>
+                </div>
+            </div>
+            <!--left to right TreeView-->
+            <div ng-if="lang=='en'" ng-class="{'ltr' : lang=='en'}">
+                <div ivh-treeview="items"
+                     ivh-treeview-twistie-expanded-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_expand_more_black_24px.svg\'></md-icon>'"
+                     ivh-treeview-twistie-collapsed-tpl="'<md-icon md-svg-icon=\'./styles/svg/ic_chevron_right_black_24px.svg\'></md-icon>'"
+                     ivh-treeview-use-checkboxes="false"
+                     ivh-treeview-expand-to-depth="1">
+                    <script type="text/ng-template">
+                        <span ivh-treeview-toggle>
+                    <span ivh-treeview-twistie></span>
+                </span>
+                        <span class="ivh-treeview-node-label">
+                    <a class="ivh-treeview-node-link"
+                       ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}}</a>
+                </span>
+                        <div ivh-treeview-children></div>
+                    </script>
+                </div>
+            </div>
+        </div>
     </div>
-    <div ivh-treeview="items"
-         ivh-treeview-use-checkboxes="false"
-         ivh-treeview-expand-to-depth="1">
-        <script type="text/ng-template">
-            <span ivh-treeview-toggle>
-                <span ivh-treeview-twistie></span>
-            </span>
-            <!--<span class="ivh-treeview-node-label" ivh-treeview-toggle>-->
-            <span class="ivh-treeview-node-label">
-                <a class="ivh-treeview-node-link"
-                   ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}}</a>
-            </span>
-            <div ivh-treeview-children></div>
-        </script>
+
+    <!--graphical view-->
+    <div ng-show="view=='GRAPHICAL'" id="tree-graphical-container" class="scroll2" dir="ltr">
+        <md-button class="close md-raised md-primary" ng-click="switchView('SIMPLE')"
+                   ng-style="{'background-color': 'cadetblue'}">نمایش ساده
+        </md-button>
+        <svg id="tree-graphical"></svg>
     </div>
-</div>
 
-<div ng-show="type=='GRAPHICAL'" id="tree-graphical-container" class="scroll2"  dir="ltr">
-    <md-button class="close md-raised md-primary" ng-click="switchView()"
-               ng-style="{'background-color': 'cadetblue'}">نمایش ساده
-    </md-button>
-    <svg id="tree-graphical"></svg>
-</div>
+    <md-divider ng-if="items"></md-divider>
 
-<md-divider ng-if="items"></md-divider>
-
-<div layout-margin="" ng-if="items">
-    <a class="fa fa-lg fa-plus green link" ui-sref="ontology.class-edit({classUrl:''})"></a>
-    <a class="link" ui-sref="ontology.class-edit({classUrl:''})">افزودن کلاس جدید</a>
+    <div layout-margin="" ng-if="items">
+        <a class="fa fa-lg fa-plus green link" ui-sref="ontology.class-edit({classUrl:''})"></a>
+        <a class="link" ui-sref="ontology.class-edit({classUrl:''})">افزودن کلاس جدید</a>
+    </div>
 </div>
