ontology class and property 'wasDerivedFrom' added

--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -53,6 +53,10 @@
             <textarea type="text" ng-model="property.types" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
+        <md-input-container>
+            <label>برگرفته شده از : </label>
+            <input type="text" ng-model="property.wasDerivedFrom"/>
+        </md-input-container>
     </div>
 
     <br>
