--- a/templates/ontology/class-edit.html
+++ b/templates/ontology/class-edit.html
@@ -109,6 +109,15 @@
                 </div>
             </div>
         </div>
+
+        <div layout="column">
+            <md-input-container>
+                <label>برگرفته شده از : </label>
+                <input type="text" ng-model="clazz.wasDerivedFrom"/>
+            </md-input-container>
+        </div>
+
+
     </div>
 </div>
 
