--- a/templates/ontology/class.html
+++ b/templates/ontology/class.html
@@ -86,6 +86,14 @@
                         <span ng-repeat="item in property.disjointWith">{{item}}{{$last ? '' : ' - '}}</span>
                     </td>
                 </tr>
+                <tr>
+                    <td class="left">
+                        <h3>برگرفته شده از : </h3>
+                    </td>
+                    <td>
+                        <span>{{clazz.wasDerivedFrom}}</span>
+                    </td>
+                </tr>
             </table>
         </div>
     </div>
