ontology tree : add name to label

--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -43,7 +43,7 @@
                 </span>
                         <span class="ivh-treeview-node-label">
                     <a class="ivh-treeview-node-link"
-                       ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}}</a>
+                       ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}} ({{node.name}})</a>
                 </span>
                         <div ivh-treeview-children></div>
                     </script>
