ontology property : next, previous property ontology tree : open class in a new tab ontology tree (graphical) : label max width & truncate large texts

--- a/styles/main.css
+++ b/styles/main.css
@@ -162,7 +162,7 @@ svg.tree {
 }
 .node text {
   font-family: IRANSans-web, Sahel, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 12px;
+  font-size: 14px;
 }
 .node text:hover {
   cursor: pointer;
@@ -267,10 +267,17 @@ table.simple tbody tr {
 table.simple tbody tr:hover {
   background-color: #e2ebf4;
 }
-.small-text {
+.large-text {
+  font-size: 14px;
+  font-weight: normal;
+}
+.medium-text {
   font-size: 12px;
   font-weight: normal;
-  margin: 0 5px;
+}
+.small-text {
+  font-size: 10px;
+  font-weight: normal;
 }
 .clickable {
   cursor: pointer;
