--- a/styles/main.less
+++ b/styles/main.less
@@ -108,10 +108,22 @@ table.simple {
 
 }
 
-.small-text {
+.large-text {
+  font-size: 14px;
+  font-weight: normal;
+  //margin: 0 5px;
+}
+
+.medium-text {
   font-size: 12px;
   font-weight: normal;
-  margin: 0 5px;
+  //margin: 0 5px;
+}
+
+.small-text {
+  font-size: 10px;
+  font-weight: normal;
+  //margin: 0 5px;
 }
 
 .clickable {
@@ -433,6 +445,10 @@ ul.small {
     }
   }
 }
+
+//.md-button {
+//  &:extend(.medium-text all);
+//}
 
 .md-green {
   background-color: lightseagreen !important;
