--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -42,8 +42,8 @@
                     <span ivh-treeview-twistie></span>
                 </span>
                         <span class="ivh-treeview-node-label">
-                    <a class="ivh-treeview-node-link"
-                       ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}} ({{node.name}})</a>
+                    <a class="ivh-treeview-node-link" target="_blank"
+                       ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}} <span class="medium-text">({{node.name}})</span></a>
                 </span>
                         <div ivh-treeview-children></div>
                     </script>
@@ -61,7 +61,7 @@
                     <span ivh-treeview-twistie></span>
                 </span>
                         <span class="ivh-treeview-node-label">
-                    <a class="ivh-treeview-node-link"
+                    <a class="ivh-treeview-node-link" target="_blank"
                        ui-sref="ontology.class({classUrl:node.url})">{{trvw.label(node)}}</a>
                 </span>
                         <div ivh-treeview-children></div>
