--- a/templates/ontology/property-edit.html
+++ b/templates/ontology/property-edit.html
@@ -1,67 +1,67 @@
 <div class="rtl">
     <div layout-margin layout="column">
 
-        <h1>{{property.name}}</h1>
+        <h1>{{data.property.name}}</h1>
 
         <md-input-container>
             <label>نام خصیصه :‌ </label>
-            <input type="text" ng-model="property.name"/>
+            <input type="text" ng-model="data.property.name"/>
         </md-input-container>
 
         <md-input-container>
             <label>آدرس :‌ </label>
-            <input type="text" ng-model="property.url"/>
+            <input type="text" ng-model="data.property.url"/>
         </md-input-container>
 
         <md-input-container>
             <label>برچسب فارسی : </label>
-            <input type="text" ng-model="property.faLabel"/>
+            <input type="text" ng-model="data.property.faLabel"/>
         </md-input-container>
 
         <md-input-container>
             <label>برچسب انگلیسی : </label>
-            <input type="text" ng-model="property.enLabel"/>
+            <input type="text" ng-model="data.property.enLabel"/>
         </md-input-container>
 
         <md-input-container>
             <label>سایر برچسب‌های فارسی (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
-            <textarea ng-model="property.faVariantLabels" ng-list="&#10;" ng-trim="false"/>
+            <textarea ng-model="data.property.faVariantLabels" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
             <label>سایر برچسب‌های انگلیسی (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
-            <textarea ng-model="property.enVariantLabels" ng-list="&#10;" ng-trim="false"/>
+            <textarea ng-model="data.property.enVariantLabels" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
             <label>خصیصه‌های معادل (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
-            <textarea type="text" ng-model="property.equivalentProperties" ng-list="&#10;" ng-trim="false"/>
+            <textarea type="text" ng-model="data.property.equivalentProperties" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
             <label>دامنه (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
-            <textarea type="text" ng-model="property.domains" ng-list="&#10;" ng-trim="false"/>
+            <textarea type="text" ng-model="data.property.domains" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
             <label>محدوده (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
-            <textarea type="text" ng-model="property.ranges" ng-list="&#10;" ng-trim="false"/>
+            <textarea type="text" ng-model="data.property.ranges" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
             <label>نوع (در هر سطر یک عبارت وارد کنید و سپس اینتر بزنید) : </label>
-            <textarea type="text" ng-model="property.types" ng-list="&#10;" ng-trim="false"/>
+            <textarea type="text" ng-model="data.property.types" ng-list="&#10;" ng-trim="false"/>
         </md-input-container>
 
         <md-input-container>
             <label>برگرفته شده از : </label>
-            <input type="text" ng-model="property.wasDerivedFrom"/>
+            <input type="text" ng-model="data.property.wasDerivedFrom"/>
         </md-input-container>
     </div>
 
     <br>
     <div layout-margin>
-        <md-button ng-click="addProperty(property, $event)" class="md-primary md-raised">تایید</md-button>
+        <md-button ng-click="addProperty(data.property, $event)" class="md-primary md-raised">تایید</md-button>
         <md-button ng-click="cancel($event)" class=" md-raised">انصراف</md-button>
     </div>
 </div>
