--- a/styles/svg.less
+++ b/styles/svg.less
@@ -18,6 +18,12 @@ div#tree-graphical-container {
     top: 5px;
   }
 
+  .close-right {
+    position: fixed;
+    right: 5px;
+    top: 5px;
+  }
+
 }
 
 svg.tree {
