--- a/templates/ontology/tree.html
+++ b/templates/ontology/tree.html
@@ -73,10 +73,12 @@
 
     <!--graphical view-->
     <div ng-show="view=='GRAPHICAL'" id="tree-graphical-container" class="scroll2" dir="ltr">
-        <div layout-align="start center" class="close">
+        <div layout-align="start center" ng-class="(lang==='en') ? 'close' : 'close-right'">
             <md-button class="md-raised md-primary" ng-click="switchView('SIMPLE')"
                        ng-style="{'background-color': 'cadetblue'}">نمایش ساده
             </md-button>
+        </div>
+        <div layout-align="start center" ng-class="(lang==='en') ? 'close' : 'close-right'" style="top: 60px;">
             <md-radio-group ng-disabled="!items" ng-model="lang" ng-change="switchLanguage(lang)" layout="row"  dir="rtl">
                 <md-radio-button value="fa" class="md-primary">فارسی</md-radio-button>
                 <md-radio-button value="en">English</md-radio-button>
